--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/kaushal1214"
+    "url": "http://github.com/kaushal1214/IoTPlatform-Demo"
   },
   "keywords": [
     "IoT"
@@ -23,6 +23,7 @@
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.7",
     "moment": "^2.17.1",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "puid": "^1.0.5"
   }
 }
